<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Android Layouts</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="textview0">TextView0</string>
    <string name="textview1">TextView1</string>
    <string name="textview2">TextView2</string>
    <string name="textview3">TextView3</string>
    <string name="textview4">TextView4</string>
    <string name="textview5">TextView5</string>
    <string name="textview6">TextView6</string>

</resources>